--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "devDependencies": {
     "babel-cli": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
-    "babel-register": "^6.7.2",
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
+    "babel-register": "^6.7.2"
   },
   "babel": {
     "presets": [
