--- a/package.json
+++ b/package.json
@@ -1,20 +1,34 @@
 {
-  "name": "",
-  "version": "",
-  "description": "",
-  "author": "",
-  "license": "",
+  "name": "geomusic",
+  "version": "1.0.0",
+  "description": "geomusic",
+  "author": "geomusic",
+  "license": "MIT",
   "engines": {
     "node": ">=6.4.0"
   },
-  "scripts": {},
+  "scripts": {
+    "react-dev": "webpack -d --watch",
+    "server-dev": "nodemon server/index.js",
+    "db-start": "mongod --dbpath ./database/data/db"
+  },
   "dependencies": {
-    "webpack": "^3.0.0"
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
+    "jquery": "^3.2.1",
+    "mongoose": "^4.10.7",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "request": "^2.81.0"
   },
   "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.0",
+    "babel-preset-react": "^6.24.1",
     "babel-cli": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
-    "babel-register": "^6.7.2"
+    "babel-register": "^6.7.2",
+    "webpack": "^3.0.0"
   },
   "babel": {
     "presets": [
