--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "db-start": "mongod --dbpath ./database/data/db"
   },
   "dependencies": {
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.3",
